# rust-media-cli

./: Cargo.toml  Makefile  README.md
src/: main.rs
src/application/: cli.rs
src/domain/: mod.rs
src/domain/digesters/: mod.rs  phash.rs  sha256.rs
src/domain/model/: mod.rs
src/domain/ports/: incoming.rs  outgoing.rs
src/domain/services/: media.rs
src/infrastructure/: memory_store.rs
